# emsqrt

./: .gitignore  Cargo.toml  README.md
benches/: performance.rs
crates/emsqrt-cli/src/: main.rs
crates/emsqrt-core/: Cargo.toml
crates/emsqrt-core/src/: arrow.rs  block.rs  budget.rs  config.rs  dag.rs  error.rs  expr.rs  hash.rs  id.rs  lib.rs  manifest.rs  prelude.rs  schema.rs  stats.rs  types.rs
crates/emsqrt-exec/: Cargo.toml
crates/emsqrt-exec/src/: failpoints.rs  lib.rs  metrics.rs  replay.rs  runtime.rs  scheduler.rs
crates/emsqrt-io/: Cargo.toml
crates/emsqrt-io/src/: arrow_convert.rs  buf.rs  error.rs  lib.rs  memory_storage.rs  storage.rs
crates/emsqrt-io/src/readers/: csv.rs  jsonl.rs  mod.rs  parquet.rs
crates/emsqrt-io/src/storage/: cloud.rs  fs.rs  mod.rs
crates/emsqrt-io/src/writers/: csv.rs  jsonl.rs  mod.rs  parquet.rs
crates/emsqrt-mem/: Cargo.toml
crates/emsqrt-mem/src/: error.rs  guard.rs  lib.rs  pool.rs  tracking.rs
crates/emsqrt-mem/src/spill/: codec.rs  mod.rs  segment.rs
crates/emsqrt-operators/: Cargo.toml
crates/emsqrt-operators/src/: agregate.rs  filter.rs  lib.rs  map.rs  plan.rs  project.rs  registry.rs  traits.rs
crates/emsqrt-operators/src/join/: hash.rs  merge.rs  mod.rs
crates/emsqrt-operators/src/sort/: external.rs  mod.rs  run.rs
crates/emsqrt-operators/src/window/: mod.rs
crates/emsqrt-planner/: Cargo.toml
crates/emsqrt-planner/src/: cost.rs  lib.rs  logical.rs  lower.rs  physical.rs  rules.rs
crates/emsqrt-planner/src/dsl/: mod.rs  yaml.rs
crates/emsqrt-te/: Cargo.toml
crates/emsqrt-te/src/: cost.rs  frontier.rs  lib.rs  schedule.rs  tree_eval.rs  verify.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
docs/: benchmarks.md
examples/: README.md
examples/cloud_spill/: README.md  pipeline.yaml
scripts/: run_all_tests.sh
scripts/benchmarks/: run_benchmarks.sh
tests/: arrow_conversion_tests.rs  cli_validation_tests.rs  cli_yaml_tests.rs  column_stats_tests.rs  cost_estimation_tests.rs  e2e_smoke.rs  error_handling_tests.rs  error_recovery_tests.rs  expression_evaluation_tests.rs  expression_tests.rs  external_sort_tests.rs  filter_expression_tests.rs  grace_hash_join_tests.rs  integration_tests.rs  lateral_explode_tests.rs  memory_budget_tests.rs  merge_join_tests.rs  parquet_io_tests.rs  rowbatch_helpers_tests.rs  spill_manager_tests.rs  storage_adapter_tests.rs  test_data_gen.rs  window_operator_tests.rs
