[package]
name = "emsqrt-io"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "IO adapters and streaming readers/writers for EM-√"
repository = "https://github.com/your-org/emsqrt"

[lib]
name = "emsqrt_io"
path = "src/lib.rs"

[features]
# Optional parquet/arrow integration (placeholder module compiled only when enabled).
parquet = ["dep:parquet", "dep:arrow-schema", "dep:arrow-array"]
s3 = ["dep:object_store", "object_store/aws", "dep:tokio", "dep:bytes", "dep:futures"]
gcs = ["dep:object_store", "object_store/gcp", "dep:tokio", "dep:bytes", "dep:futures"]
azure = ["dep:object_store", "object_store/azure", "dep:tokio", "dep:bytes", "dep:futures"]
cloud-all = ["s3", "gcs", "azure"]

[dependencies]
emsqrt-core = { path = "../emsqrt-core", package = "emsqrt-core" }
emsqrt-mem  = { path = "../emsqrt-mem",  package = "emsqrt-mem" }

thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Only when parquet feature is enabled
parquet = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
arrow-array = { version = "53", optional = true }

# Utility
blake3 = "1"
url = "2"

object_store = { version = "0.9.0", optional = true, default-features = false }
tokio = { version = "1.36", features = ["rt-multi-thread"], optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
