[package]
name = "emsqrt-mem"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hard memory budgeting, fallible buffer pool, and spill manager for EM-√"
repository = "https://github.com/your-org/emsqrt"

[lib]
name = "emsqrt_mem"
path = "src/lib.rs"

[features]
# Optional compression backends for spill segments.
zstd = ["dep:zstd"]
lz4  = ["dep:lz4_flex"]
# Optional tracing for metrics/logging; keep core lean by default.
tracing = ["dep:tracing"]

[dependencies]
emsqrt-core = { path = "../emsqrt-core", package = "emsqrt-core" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
once_cell = "1"
tracing = { version = "0.1", optional = true }

# Compression libraries (feature-gated)
zstd = { version = "0.13", optional = true, default-features = false, features = ["zstdmt"] }
lz4_flex = { version = "0.11", optional = true, default-features = false }
