[package]
name = "emsqrt-operators"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TE-friendly operators for the EM-√ engine"

[lib]
name = "emsqrt_operators"
path = "src/lib.rs"

[dependencies]
emsqrt-core = { path = "../emsqrt-core", package = "emsqrt-core" }
emsqrt-mem  = { path = "../emsqrt-mem",  package = "emsqrt-mem" }

serde = { version = "1", features = ["derive"] }
thiserror = "1"
