[package]
name = "emsqrt-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
emsqrt-core = { path = "../emsqrt-core" }
emsqrt-te = { path = "../emsqrt-te" }
emsqrt-mem = { path = "../emsqrt-mem" }
emsqrt-io = { path = "../emsqrt-io" }
emsqrt-operators = { path = "../emsqrt-operators" }
emsqrt-planner = { path = "../emsqrt-planner" }
emsqrt-exec = { path = "../emsqrt-exec" }
serde_json = "1"

[features]
default = []
zstd = ["emsqrt-mem/zstd"]
lz4 = ["emsqrt-mem/lz4"]

[[test]]
name = "spill_manager_tests"
path = "../../tests/spill_manager_tests.rs"

[[test]]
name = "rowbatch_helpers_tests"
path = "../../tests/rowbatch_helpers_tests.rs"

[[test]]
name = "memory_budget_tests"
path = "../../tests/memory_budget_tests.rs"

[[test]]
name = "external_sort_tests"
path = "../../tests/external_sort_tests.rs"

[[test]]
name = "integration_tests"
path = "../../tests/integration_tests.rs"

[[test]]
name = "e2e_smoke"
path = "../../tests/e2e_smoke.rs"

